--- a/kurs_laravel/public/css/custom.css
+++ b/kurs_laravel/public/css/custom.css
@@ -228,7 +228,7 @@ a, .btn-link {
 
 /* Stopka */
 .site-footer {
-	background-color: #3F51B5;
+	background-color: #555;
 	height: 80px;
     /*position: fixed;
     bottom: 0;
