--- a/kurs_laravel/public/css/custom.css
+++ b/kurs_laravel/public/css/custom.css
@@ -13,11 +13,11 @@ html, body {
 body {
 	padding-top: 23px;
 	color: #212121;
-	background-color: #E9EAED;
+	background-color: #e5dfe8;
 }
 
 .site-content {
-	margin-top: 30px;
+	margin-top: 29px;
 	margin-bottom: 50px;	
 }
 
@@ -42,7 +42,7 @@ a, .btn-link {
 
 /* Top navbar */
 .navbar-default {
-	background-color: #121313;
+	background-color: black;
 	border: none;
 	box-shadow: 0px 0px 22px 0px #040404;
 	border-radius: 4px;
@@ -66,15 +66,16 @@ a, .btn-link {
 /* Wspolne style */
 
 .videos-header  {
-	  background: rgba(0, 0, 0, 1);
-	margin-top:4px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 20px;
-	margin-bottom: 20px;
+	  background-color:black;
+	margin-top:10px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+
+	margin-bottom: 10px;
 	text-align:center;
 	color:white;
 	border-bottom:3px solid #ffc404;
+	box-shadow: 0px 0px 22px 0px #ffc404;
 
 	
 }
@@ -84,6 +85,7 @@ a, .btn-link {
 	margin: 0;
 	font-weight:bold;
 	font-size:35px;
+	 letter-spacing:5px;
 
 }
 
@@ -94,7 +96,7 @@ a, .btn-link {
   	box-sizing: border-box;
   	background-clip: padding-box;
   	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  	background-color: #FFFFFF;
+  	background-color: white;
 }
 
  .single-video {
@@ -114,7 +116,7 @@ a, .btn-link {
 }
 
 .card-content p {
-	color: #727272;
+	color: black;
 }	
 
 .upper-label {
@@ -126,7 +128,7 @@ a, .btn-link {
 }
 
 .video-author {
-	color: #727272;
+	color: #a9a9aa;
 	font-size: 16px;
 }
 
@@ -245,8 +247,10 @@ a, .btn-link {
 
 /* Stopka */
 .site-footer {
-	background-color: #555;
+	background-color: #f2f2f2;
 	height: 80px;
+	border-top:0.5px solid #a9a9aa;
+	border-bottom:0.5px solid #a9a9aa;
     /*position: fixed;
     bottom: 0;
     width: 100%;*/
@@ -254,9 +258,9 @@ a, .btn-link {
 
 .site-footer p {
 	line-height: 80px;
-	font-size: 16px;
+	font-size: 18px;
 	margin: 0;
-	color: #FFFFFF;
+	color: #777;
 }
 
 .site-footer p span {
