--- a/kurs_laravel/public/css/custom.css
+++ b/kurs_laravel/public/css/custom.css
@@ -280,9 +280,13 @@ a, .btn-link {
 
 .nav-link.active{
 	background-color: #ffc404;
-	color:black !important;;
+	color:black !important;
 }
 
 .navbar-brand{
 	margin-top:-15px;
+}
+.btn.btn-primary{
+	background-color: black !important;
+	color:white !important;
 }
