--- a/kurs_laravel/public/css/custom.css
+++ b/kurs_laravel/public/css/custom.css
@@ -88,6 +88,30 @@ a, .btn-link {
 	 letter-spacing:5px;
 
 }
+.videos-header2  {
+	  background-color:#f2f2f2;
+	margin-top:10px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+
+	margin-bottom: 10px;
+	text-align:center;
+	color:black;
+	border-bottom:2px solid black;
+	box-shadow: 0px 0px 22px 0px black;
+
+	
+}
+
+.videos-header2 h2 {
+
+	padding: 0;
+	margin: 0;
+	font-weight:bold;
+	font-size:35px;
+	 letter-spacing:5px;
+
+}
 
 /* Lista video */
 
@@ -295,4 +319,7 @@ a, .btn-link {
 	background-color:#ffc404;
 	margin:0;
 	padding: 0; 
+}
+.row{
+	min-height:240px; 
 }
