--- a/kurs_laravel/public/css/custom.css
+++ b/kurs_laravel/public/css/custom.css
@@ -122,7 +122,13 @@ a, .btn-link {
   	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   	background-color: white;
 }
-
+.card2 {
+	margin-top: 0px;
+  	box-sizing: border-box;
+  	background-clip: padding-box;
+  	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  	background-color: #f2f2f2;
+}
  .single-video {
     min-height: 360px;
     margin-bottom: 50px;
