--- a/kurs_laravel/public/css/custom.css
+++ b/kurs_laravel/public/css/custom.css
@@ -87,17 +87,20 @@ a, .btn-link {
 	font-size:35px;
 	 letter-spacing:5px;
 
+
 }
 .videos-header2  {
-	  background-color:#f2f2f2;
+	  background-color:#ffffff;
 	margin-top:10px;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	padding-top: 14px;
+	padding-bottom: 10px;
 
-	margin-bottom: 10px;
+	margin-bottom: 0px;
 	text-align:center;
 	color:black;
-	border-bottom:2px solid black;
+	border-top:1px solid black;
+	border-left:1px solid black;
+	border-right:1px solid black;
 	box-shadow: 0px 0px 22px 0px black;
 
 	
