--- a/kurs_laravel/public/css/custom.css
+++ b/kurs_laravel/public/css/custom.css
@@ -125,6 +125,13 @@ a, .btn-link {
   	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   	background-color: white;
 }
+.card-show {
+	margin-top: 10px;
+  	box-sizing: border-box;
+  	background-clip: padding-box;
+  	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  	background-color: white;
+}
 .card2 {
 	margin-top: 0px;
   	box-sizing: border-box;
